...
            android:text="Your Emotion State (Required)"
            android:textColor="#ffafae"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinnerEmotion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/dropdown_background"
            android:hint="Choose from the dropdown box"
            android:padding="12dp" />
...
            android:text="What was the reason? (Optional)"
            android:textColor="#ffafae"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editReason"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@android:drawable/editbox_background"
            android:inputType="textMultiLine"
            android:lines="1"
...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imagePreview"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/image_placeholder_background"
                android:scaleType="centerInside" />

...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonCancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:backgroundTint="#F08080"
                android:text="Cancel"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonConfirm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:backgroundTint="#F08080"
                android:text="Confirm"
...
