...
    android:paddingHorizontal="24dp"
    android:background="@android:color/white"
    tools:context=".auth.Login">

    <!-- Title -->
    <TextView
        android:id="@+id/tvLoginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Login"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="#F88379"
...
        app:layout_constraintTop_toBottomOf="@+id/tvLoginTitle"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="32dp" />

    <!-- Username Input -->
    <EditText
        android:id="@+id/etUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:background="@android:drawable/editbox_background"
        android:layout_marginTop="8dp"
        android:inputType="text"
...
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/etUsername"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Password Input -->
    <EditText
        android:id="@+id/etPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:background="@android:drawable/editbox_background"
        android:layout_marginTop="8dp"
        android:inputType="textPassword"
...
        app:layout_constraintTop_toBottomOf="@+id/etPassword"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Login Button -->

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#F88379"
        android:paddingVertical="12dp"
        android:text="Login"
...
