<resources>
    <string name="app_name">UnemployedAvengers</string>
    <string-array name="spinner_items">
        <item>😠Anger</item>
        <item>😕Confusion</item>
        <item>🤢Disgust</item>
        <item>😨Fear</item>
        <item>😄Happiness</item>
        <item>😔Sadness</item>
        <item>😳Shame</item>
        <item>😯Surprise </item>

    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>